feat: add *.DS_Store in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -104,5 +104,6 @@ iOSInjectionProject/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+*.DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,cocoapods
