--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ iOSInjectionProject/
 ## User settings
 *.xcuserstate
 xcuserdata/
+.DS_Store
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 
