config : gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .DS_Store
 *.xcuserdata
+/xcuserdata
+
+xcuserdata/
+
+*.xcscmblueprint
+*.xccheckout
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcworkspace/contents.xcworkspacedata
+/*.gcno
+**/xcshareddata/WorkspaceSettings.xcsettings
