chore : 누락된 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ xcuserdata/
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
+GyroData.xcodeproj/project.xcworkspace/xcuserdata/ijeongmin.xcuserdatad/UserInterfaceState.xcuserstate
